--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -7272,3 +7272,23 @@
     model: Tommy 3
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 10; Pixel 4a Build/QD4A.200805.003)
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: GO
+    model: Pixel 4a
+  os_family: Android
+  browser_family: Android Browser
