--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5357,6 +5357,8 @@ Google:
       model: 'Pixel 3'
     - regex: 'Pixel 4 XL'
       model: 'Pixel 4 XL'
+    - regex: 'pixel 4a'
+      model: 'Pixel 4a'
     - regex: 'pixel 4'
       model: 'Pixel 4'
     - regex: 'Pixel 2|G011A'
