--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11309,7 +11309,7 @@ Samsung:
       model: 'GALAXY J1 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J110[FHMLG]|J111[FM])'
       model: 'GALAXY J1 Ace'
-    - regex: '(?:SAMSUNG-)?SM-J200[FGHY]'
+    - regex: '(?:SAMSUNG-)?SM-J200[FGHYM]'
       model: 'GALAXY J2'
     - regex: '(?:SAMSUNG-)?SM-J200BT'
       model: 'GALAXY J2 Duos'
@@ -11337,7 +11337,7 @@ Samsung:
       model: 'GALAXY J3 Luna Pro'
     - regex: '(?:SAMSUNG-)?SM-J3109'
       model: 'GALAXY J3 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
+    - regex: '(?:SAMSUNG-)?SM-J320(?:[ZF]N|R4|W8|YZ|[AFGHMNPVY])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J330(?:[08FGLN]|FN)|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
