--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3614,7 +3614,7 @@ AllDocube:
 
 # Cube (short name Alldocube)
 Cube:
-  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML|I1-TF[BD]?|I1-TC|i1002S)[);/ ]'
+  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML|I1-TF[BD]?|I1-TC|i1002S|Iwork10 Flagship|iwork10 Pro)[);/ ]'
   device: 'tablet'
   models:
     - regex: 'U27GT'
@@ -3629,8 +3629,10 @@ Cube:
       model: 'iWork 8 Air'
     - regex: 'I1-TC[);/ ]'
       model: 'iWork 8 Ultimate'
-    - regex: 'i1002S[);/ ]'
+    - regex: '(?:i1002S|iwork10 Pro)[);/ ]'
       model: 'iWork 10 Pro'
+    - regex: 'Iwork10 Flagship[);/ ]'
+      model: 'iWork 10 Flagship'
 
     - regex: '(U[0-9]+GT[^;/]*) Build'
       model: '$1'
