--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15787,7 +15787,7 @@ Unihertz:
 
 # Chuwi
 Chuwi:
-  regex: 'CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (pro|plus))[;)/ ]'
+  regex: '(?:CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (pro|plus))|Hi10 Pro|HiBox-hero)[;)/ ]'
   device: 'tablet'
   models:
     - regex: '(CW-Hi8-super)[;)/ ]'
@@ -15800,8 +15800,13 @@ Chuwi:
       model: '$1 Dual'
     - regex: 'CW-(V17HD|VX8)-?(3G)[;)/ ]'
       model: '$1 $2'
-    - regex: 'CW-(Hi10) pro[;)/ ]'
+    - regex: '(?:CW-)?(Hi10) pro[;)/ ]'
       model: '$1 Pro'
+
+    - regex: 'HiBox-hero[;)/ ]'
+      model: 'HiBox Hero'
+      device: 'desktop'
+
     - regex: 'CW-(Vi[78]|Hi12|V99|V88S)[;)/ ]'
       model: '$1'
 
