--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15787,12 +15787,12 @@ Unihertz:
 
 # Chuwi
 Chuwi:
-  regex: '(?:CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (pro|plus))|Hi10 Pro|HiBox-hero)[;)/ ]'
+  regex: '(?:CW-(Hi8-super|Hi12|V99|V17HD3G|VX8-3G|V88-QUAD|V9-DUAL|V88S|Vi[78]|[HV]i10 (pro|plus))|Hi10 (?:Pro|plus)|HiBox-hero|HiBook pro|Hi8 (?:Air|Pro))[;)/ ]'
   device: 'tablet'
   models:
     - regex: '(CW-Hi8-super)[;)/ ]'
       model: 'Hi8'
-    - regex: 'CW-(Vi10) plus[;)/ ]'
+    - regex: '(?:CW-)?(Vi10|Hi10) plus[;)/ ]'
       model: '$1 Plus'
     - regex: 'CW-(V88)-QUAD[;)/ ]'
       model: '$1 Quad'
@@ -15802,6 +15802,12 @@ Chuwi:
       model: '$1 $2'
     - regex: '(?:CW-)?(Hi10) pro[;)/ ]'
       model: '$1 Pro'
+    - regex: 'HiBook pro[;)/ ]'
+      model: 'HiBook Pro'
+    - regex: 'Hi8 Air[;)/ ]'
+      model: 'Hi8 Air'
+    - regex: 'Hi8 pro[;)/ ]'
+      model: 'Hi8 Pro'
 
     - regex: 'HiBox-hero[;)/ ]'
       model: 'HiBox Hero'
